crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__custom_type_missing_variant.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "Code:\n\ntype option 'a ="
---
nash::syntax

  × Expected a constructor name.
   ╭─[src/Main.nash:1:17]
 1 │ type option 'a =
   ·                 ─
   ╰────
  help: Start the constructor name with an uppercase letter.
