crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__custom_type_reserved_parameter.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: if
---
nash::diagnostic

  × I ran into a reserved word unexpectedly while parsing this custom type:
   ╭─[src/Main.nash:1:1]
 1 │ if
   · ──
   ╰────
  help: It looks like you are trying to use `if` as a type variable, but it is a
        reserved word. Try using a different name?

        Note: Here is an example of a valid `type` declaration for reference:

            type option 'a = None | Some 'a

        This defines a new `option` type with two variants. The Some variant has some
        associated data, allowing us to store a value when one is available. None
        represents the absence of a value.
