crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__decl_def_indent_body.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "Code:\n\nf =\n1"
---
UNFINISHED DEFINITION

  × I got stuck while parsing the `f` definition:
   ╭─[src/Main.nash:1:4]
 1 │ f =
   ·    ─
 2 │ 1
   ╰────
  help: I was expecting to see an expression next. What is it equal to?

        Here is a valid definition (with a type annotation) for reference:

            greet : string -> string
            greet name =
              "Hello " ++ name ++ "!"

        The top line (called a "type annotation") is optional. You can leave it off if
        you want. As you get more comfortable with Nash and as your project grows, it
        becomes more and more valuable to add them though! They work great as
        compiler-verified documentation, and they often improve error messages!
