crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__decl_def_missing_equals.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "Code:\n\nf x"
---
nash::syntax

  × Expected `=` in the definition of `f`.
   ╭─[src/Main.nash:1:4]
 1 │ f x
   ·    ─
   ╰────
  help: Separate the arguments and body with `=`.
