crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__decl_def_name_match.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "Code:\n\nf : int\ng = 1"
---
nash::syntax

  × Expected definition `f`, found `g`.
   ╭─[src/Main.nash:2:2]
 1 │ f : int
 2 │ g = 1
   ·  ─
   ╰────
  help: Use the same name for the annotation and definition.
