crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__decl_start_case.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: case
---
nash::diagnostic

  × Unexpected `case` at the start of a declaration.
   ╭─[src/Main.nash:1:1]
 1 │ case
   · ────
   ╰────
  help: Put the expression inside a named definition.
