crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__decl_start_if.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: if
---
nash::diagnostic

  × I was not expecting to run into the `if` keyword here:
   ╭─[src/Main.nash:1:1]
 1 │ if
   · ──
   ╰────
  help: It is reserved for writing `if` expressions. Try using a different name? If you
        are trying to write an `if` expression, it needs to be part of a definition.
