crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__decl_start_uppercase.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: Thing
---
nash::diagnostic

  × Declarations always start with a lower-case letter, so I am getting stuck here:
   ╭─[src/Main.nash:1:1]
 1 │ Thing
   · ─
   ╰────
  help: Try a name like thing instead?

        Here is a valid definition (with a type annotation) for reference:

            greet : string -> string
            greet name =
              "Hello " ++ name ++ "!"

        The top line (called a "type annotation") is optional. You can leave it off if
        you want. As you get more comfortable with Nash and as your project grows, it
        becomes more and more valuable to add them though! They work great as
        compiler-verified documentation, and they often improve error messages!

        Notice that they always start with a lower-case letter. Capitalization matters!
