crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__definition_missing_colon.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: "->"
---
MISSING COLON?

  × I was not expecting to see an arrow here:
   ╭─[src/Main.nash:1:1]
 1 │ ->
   · ─
   ╰────
  help: This usually means a : is missing a bit earlier in a type annotation. It could
        be something else though, so here is a valid definition for reference:

            greet : string -> string
            greet name =
              "Hello " ++ name ++ "!"

        Try to use that format with your `f` definition!
