crates/nash-report/src/syntax/snapshots/nash_report__syntax__tests__definition_reserved_argument.snap
---
source: crates/nash-report/src/syntax/tests.rs
description: f if = 1
---
nash::diagnostic

  × Reserved word `if` cannot be an argument name.
   ╭─[src/Main.nash:1:3]
 1 │ f if = 1
   ·   ──
   ╰────
  help: Choose another name.
